syntax = "proto3";
package proto;
option go_package = "./";

service NodeService  {
    // Obtains a node's name
    rpc GetNodeStatus(NodeInfoRequest) returns (NodeInfoResponse) {}
    // // read/write to known peers
    // rpc ListKnownPeers(ListKnownPeersRequest) returns (stream ListKnownPeersResponse) {}
    // // read/write blocks 
    // rpc ListBlocks(ListBlocksRequest) returns (stream BlockResponse) {}
    // add pending transaction
    rpc AddTransaction(AddPendingTransactionRequest) returns (AddPendingTransactionResponse) {}
    // list pending transactions
    // rpc ListTransactions(ListPendingTransactionsRequest) returns (stream PendingTransactionResponse) {}
}

message ListPendingTransactionsRequest {}
message PendingTransactionResponse {
    bytes signedTx = 1;
}

message AddPendingTransactionRequest {
    string topic = 1;
}

message AddPendingTransactionResponse { }

message ListBlocksRequest {
    string fromBlock = 1;
}
message BlockResponse {
    bytes block = 1;
}
message BlockHeaderMessage {
    string parent = 1;
    uint64 time = 2;
    uint64 number = 3;
    uint32 nonce = 4;
    string miner = 5;
    int32 pow = 6;
}

message ListKnownPeersRequest {}

message ListKnownPeersResponse {
    string name = 1;
    string ip = 2;
    uint64 port = 3;
    bool isBootstrap = 4;
    string address = 5;
}

message NodeInfoRequest { }

message NodeInfoResponse {
    string address = 1;
    float balance = 2;
    repeated string subscriptions = 3;
    repeated string channels = 4;
}